--- a/笔记.md
+++ b/笔记.md
@@ -1,50 +1,58 @@
-# 两种模式
+# 路由信息
 
-路由：根据不同的页面地址，展示不同的组件
+Router组件会创建一个上下文，并且，向上下文中注入一些信息
 
-url地址组成
+该上下文对开发者是隐藏的，Route组件若匹配到了地址，则会将这些上下文中的信息作为属性传入对应的组件
 
-例：https://www.react.com:443/news/1-2-1.html?a=1&b=2#abcdefg
+## history
 
-1. 协议名(schema)：https
-2. 主机名(host)：www.react.com
-   1. ip地址
-   2. 预设值：localhost
-   3. 域名
-   4. 局域网中电脑名称
-3. 端口号(port)：443
-   1. 如果协议是http，端口号是80，则可以省略端口号
-   2. 如果协议是https，端口号是443，则可以省略端口号
-4. 路径(path)：/news/1-2-1.html
-5. 地址参数(search、query)：?a=1&b=2
-   1. 附带的数据
-   2. 格式：属性名=属性值&属性名=属性值....
-6. 哈希(hash、锚点)
-   1. 附带的数据
+它并不是window.history对象，我们利用该对象无刷新跳转地址
 
-## Hash Router 哈希路由
+**为什么没有直接使用history对象**
 
-根据url地址中的哈希值来确定显示的组件
+1. React-Router中有两种模式：Hash、History，如果直接使用window.history，只能支持一种模式
+2. 当使用windows.history.pushState方法时，没有办法收到任何通知，将导致React无法知晓地址发生了变化，结果导致无法重新渲染组件
 
-> 原因：hash的变化，不会导致页面刷新
-> 这种模式的兼容性最好
+- push：将某个新的地址入栈（历史记录栈）
+  - 参数1：新的地址
+  - 参数2：可选，附带的状态数据
+- replace：将某个新的地址替换掉当前栈中的地址
+- go: 与window.history一致
+- forward: 与window.history一致
+- back: 与window.history一致
 
-## Borswer History Router 浏览器历史记录路由
+## location
 
-HTML5出现后，新增了History Api，从此以后，浏览器拥有了改变路径而不刷新页面的方式
+与history.location完全一致，是同一个对象，但是，与window.location不同
 
-History表示浏览器的历史记录，它使用栈的方式存储。
+location对象中记录了当前地址的相关信息
 
-![](assets/2019-08-02-15-24-05.png)
+我们通常使用第三方库```query-string```，用于解析地址栏中的数据
 
-1. history.length：获取栈中数据量
-2. history.pushState：向当前历史记录栈中加入一条新的记录
-   1. 参数1：附加的数据，自定义的数据，可以是任何类型
-   2. 参数2：页面标题，目前大部分浏览器不支持
-   3. 参数3：新的地址
-3. history.replaceState：将当前指针指向的历史记录，替换为某个记录
-   1. 参数1：附加的数据，自定义的数据，可以是任何类型
-   2. 参数2：页面标题，目前大部分浏览器不支持
-   3. 参数3：新的地址
+## match
 
-根据页面的路径决定渲染哪个组件
+该对象中保存了，路由匹配的相关信息
+
+- isExact：事实上，当前的路径和路由配置的路径是否是精确匹配的
+- params：获取路径规则中对应的数据
+
+
+实际上，在书写Route组件的path属性时，可以书写一个```string pattern```（字符串正则）
+
+react-router使用了第三方库：Path-to-RegExp，该库的作用是，将一个字符串正则转换成一个真正的正则表达式。
+  
+**向某个页面传递数据的方式：**
+
+1. 使用state：在push页面时，加入state
+2. **利用search：把数据填写到地址栏中的？后**
+3. 利用hash：把数据填写到hash后
+4. **params：把数据填写到路径中**
+
+
+
+## 非路由组件获取路由信息
+
+某些组件，并没有直接放到Route中，而是嵌套在其他普通组件中，因此，它的props中没有路由信息，如果这些组件需要获取到路由信息，可以使用下面两种方式：
+
+1. 将路由信息从父组件一层一层传递到子组件
+2. 使用react-router提供的高阶组件withRouter，包装要使用的组件，该高阶组件会返回一个新组件，新组件将向提供的组件注入路由信息。
