--- a/笔记.md
+++ b/笔记.md
@@ -1,58 +1,49 @@
-# 路由信息
+# 其他组件
 
-Router组件会创建一个上下文，并且，向上下文中注入一些信息
+已学习：
 
-该上下文对开发者是隐藏的，Route组件若匹配到了地址，则会将这些上下文中的信息作为属性传入对应的组件
+- Router：BrowswerRouter、HashRouter
+- Route
+- Switch
+- 高阶函数：withRouter
 
-## history
+## Link
 
-它并不是window.history对象，我们利用该对象无刷新跳转地址
+生成一个无刷新跳转的a元素
 
-**为什么没有直接使用history对象**
+- to
+  - 字符串：跳转的目标地址
+  - 对象：
+    - pathname：url路径
+    - search
+    - hash
+    - state：附加的状态信息
+- replace：bool，表示是否是替换当前地址，默认是false
+- innerRef：可以将内部的a元素的ref附着在传递的对象或函数参数上
+  - 函数
+  - ref对象
 
-1. React-Router中有两种模式：Hash、History，如果直接使用window.history，只能支持一种模式
-2. 当使用windows.history.pushState方法时，没有办法收到任何通知，将导致React无法知晓地址发生了变化，结果导致无法重新渲染组件
+## NavLink
 
-- push：将某个新的地址入栈（历史记录栈）
-  - 参数1：新的地址
-  - 参数2：可选，附带的状态数据
-- replace：将某个新的地址替换掉当前栈中的地址
-- go: 与window.history一致
-- forward: 与window.history一致
-- back: 与window.history一致
+是一种特殊的Link，Link组件具备的功能，它都有
 
-## location
+它具备的额外功能是：根据当前地址和链接地址，来决定该链接的样式
 
-与history.location完全一致，是同一个对象，但是，与window.location不同
+- activeClassName: 匹配时使用的类名
+- activeStyle: 匹配时使用的内联样式
+- exact: 是否精确匹配
+- sensitive：匹配时是否区分大小写
+- strict：是否严格匹配最后一个斜杠
 
-location对象中记录了当前地址的相关信息
+## Redirect
 
-我们通常使用第三方库```query-string```，用于解析地址栏中的数据
+重定向组件，当加载到该组件时，会自动跳转（无刷新）到另外一个地址
 
-## match
-
-该对象中保存了，路由匹配的相关信息
-
-- isExact：事实上，当前的路径和路由配置的路径是否是精确匹配的
-- params：获取路径规则中对应的数据
-
-
-实际上，在书写Route组件的path属性时，可以书写一个```string pattern```（字符串正则）
-
-react-router使用了第三方库：Path-to-RegExp，该库的作用是，将一个字符串正则转换成一个真正的正则表达式。
-  
-**向某个页面传递数据的方式：**
-
-1. 使用state：在push页面时，加入state
-2. **利用search：把数据填写到地址栏中的？后**
-3. 利用hash：把数据填写到hash后
-4. **params：把数据填写到路径中**
-
-
-
-## 非路由组件获取路由信息
-
-某些组件，并没有直接放到Route中，而是嵌套在其他普通组件中，因此，它的props中没有路由信息，如果这些组件需要获取到路由信息，可以使用下面两种方式：
-
-1. 将路由信息从父组件一层一层传递到子组件
-2. 使用react-router提供的高阶组件withRouter，包装要使用的组件，该高阶组件会返回一个新组件，新组件将向提供的组件注入路由信息。
+- to：跳转的地址
+  - 字符串
+  - 对象
+- push: 默认为false，表示跳转使用替换的方式，设置为true后，则使用push的方式跳转
+- from：当匹配到from地址规则时才进行跳转
+- exact: 是否精确匹配from
+- sensitive：from匹配时是否区分大小写
+- strict：from是否严格匹配最后一个斜杠
